# cod2-iwi-gallery

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  deploy.sh  index.html
src/: categorize_tex.cpp  categorize_tex.h  gallery_tex.cpp  gallery_tex.h  image.cpp  image.h  main.cpp  vfs.cpp  vfs.h
